<resources>
    <string name="app_name">Level Transmitter Sizing</string>
    <string name="dayMode">Day Mode</string>
    <string name="nightMode">Night Mode</string>
    <string name="logo">Palcom\'s Logo</string>
    <string name="highChamberFlangeToMax">Height H1</string>
    <string name="highChamberFlange">Height H0</string>
    <string name="highChamberBottomTank">Height BH</string>
    <string name="lowChamberFlangeToMax">Height L1</string>
    <string name="lowChamberFlange">Height L0</string>
    <string name="lowChamberBottomTank">Height BL</string>
    <string name="staticPressure">Static Pressure Tank</string>
    <string name="SGFill">SG Fill Fluid</string>
    <string name="SGLiquid">SG Liquid</string>
    <string name="SGFillFluidIfAny">If fill fluid is not used, you should indicate that by
    writing 0 at SG Fill Fluid field</string>
    <string name="img">Tank</string>
    <string-array name="legs">
        <item>Two Legs</item>
        <item>One Leg - Pressurized Tank</item>
        <item>One Leg - Atmospheric Tank</item>
    </string-array>
    <string name="result">=</string>
    <string-array name="pressureUnit">
        <item>Pa.-g</item>
        <item>bar-g</item>
        <item>atm-g</item>
        <item>mmHg-g</item>
        <item>mmH2O-g</item>
        <item>mH2O-g</item>
        <item>kg/cm2-g</item>
        <item>psf-g</item>
        <item>psi-g</item>
        <item>in Hg-g</item>
        <item>in H2O-g</item>
    </string-array>

    <string-array name="lengthUnit">
        <item>m</item>
        <item>dm</item>
        <item>cm</item>
        <item>mm</item>
        <item>um</item>
        <item>nm</item>
        <item>A</item>
        <item>hm</item>
        <item>km</item>
        <item>in</item>
        <item>ft</item>
        <item>yrd</item>
        <item>mile</item>
        <item>Nautical Mile</item>
        <item>Cable</item>
    </string-array>

</resources>
